tests/files/lexer_tests/should_fail/059.cmdr
// Illegal character in variable name (ascii 26)
myvar = 26;